[tool.poetry]
name = "nbtlib"
version = "1.8.3"
description = "A python package to read and edit nbt data"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/nbtlib"
repository = "https://github.com/vberlier/nbtlib"
documentation = "https://github.com/vberlier/nbtlib"

readme = "README.md"

keywords = [
  "nbt",
  "nbt-parser",
  "schema",
  "minecraft",
  "nbtlib",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "> 1.16, < 1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-benchmark = "^3.2"
black = "^20.8b1"
mudkip = "^0.3.6"
pytest-minecraft = "^0.1.1"
python-semantic-release = "^7.9.0"

[tool.poetry.scripts]
nbt = 'nbtlib.cli:main'

[tool.semantic_release]
branch = "main"
version_variable = ["nbtlib/__init__.py:__version__"]
version_pattern = ['pyproject.toml:\nversion = "{version}"']
build_command = "poetry build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
