[tool.poetry]
name = "nbtlib"
version = "2.0.2"
description = "A python package to read and edit nbt data"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/nbtlib"
repository = "https://github.com/vberlier/nbtlib"
documentation = "https://github.com/vberlier/nbtlib"

readme = "README.md"

keywords = [
  "nbt",
  "nbt-parser",
  "schema",
  "minecraft",
  "nbtlib",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
black = "^21.8b0"
mudkip = "^0.4.10"
pytest-minecraft = "^0.1.1"
python-semantic-release = "^7.19.1"

[tool.poetry.scripts]
nbt = 'nbtlib.cli:main'

[tool.semantic_release]
branch = "main"
version_variable = ["nbtlib/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "poetry build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
