[tool.poetry]
name = "nbtlib"
version = "2.1.0-alpha.0"
description = "A python package to read and edit nbt data"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/nbtlib"
repository = "https://github.com/vberlier/nbtlib"
documentation = "https://github.com/vberlier/nbtlib"

readme = "README.md"

keywords = [
  "nbt",
  "nbt-parser",
  "schema",
  "minecraft",
  "nbtlib",
]

include = ["nbtlib/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.0"
python-semantic-release = "^7.26.0"
Cython = "^0.29.28"

[tool.poerty.build]
script = "build.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "tests nbtlib --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["nbtlib/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "poetry build"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"
